kubernetes/app-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-app-deployment
  labels:
    app: store-app-deployment
spec:
  selector:
    matchLabels:
      app: store-app-deployment
  template:
    metadata:
      name: store-app-deployment
      labels:
        app: store-app-deployment      # service will connect by this labels
    spec:
      containers:
        - name: store-app-deployment
          image: berezzin/store-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: store-app-service
  labels:
    env: prod
spec:
  selector:
    app: store-app-deployment      # Selecting PODs with those Labels
  ports:
    - name: app-listener
      protocol: TCP
      port: 80  # Port on Load Balancer
      targetPort: 8000  # Port on Pod
  type: ClusterIP
